@@ -7,7 +7,6 @@ package io.airbyte.commons.server.helpers;
 import static io.airbyte.commons.server.handlers.helpers.CatalogConverter.toApi;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.google.common.collect.Lists;
 import io.airbyte.api.model.generated.AirbyteCatalog;
 import io.airbyte.api.model.generated.AirbyteStream;
 import io.airbyte.api.model.generated.AirbyteStreamAndConfiguration;
@@ -34,21 +33,20 @@ import io.airbyte.commons.enums.Enums;
 import io.airbyte.commons.server.converters.ApiPojoConverters;
 import io.airbyte.commons.text.Names;
 import io.airbyte.config.BasicSchedule;
+import io.airbyte.config.ConfiguredAirbyteCatalog;
+import io.airbyte.config.ConfiguredAirbyteStream;
+import io.airbyte.config.DestinationSyncMode;
 import io.airbyte.config.JobSyncConfig.NamespaceDefinitionType;
 import io.airbyte.config.Schedule;
 import io.airbyte.config.Schedule.TimeUnit;
 import io.airbyte.config.ScheduleData;
 import io.airbyte.config.StandardSync;
 import io.airbyte.config.StandardSync.Status;
-import io.airbyte.protocol.models.CatalogHelpers;
-import io.airbyte.protocol.models.ConfiguredAirbyteCatalog;
-import io.airbyte.protocol.models.ConfiguredAirbyteStream;
-import io.airbyte.protocol.models.DestinationSyncMode;
+import io.airbyte.config.StreamDescriptor;
+import io.airbyte.config.helpers.CatalogHelpers;
 import io.airbyte.protocol.models.Field;
 import io.airbyte.protocol.models.JsonSchemaType;
-import io.airbyte.protocol.models.StreamDescriptor;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -316,20 +314,18 @@ public class ConnectionHelpers {
   }
 
   public static ConfiguredAirbyteCatalog generateBasicConfiguredAirbyteCatalog() {
-    return new ConfiguredAirbyteCatalog().withStreams(Collections.singletonList(generateBasicConfiguredStream(null)));
+    return new ConfiguredAirbyteCatalog().withStreams(List.of(generateBasicConfiguredStream(null)));
   }
 
   public static ConfiguredAirbyteCatalog generateAirbyteCatalogWithTwoFields() {
-    return new ConfiguredAirbyteCatalog().withStreams(Collections.singletonList(new ConfiguredAirbyteStream()
-        .withStream(
-            new io.airbyte.protocol.models.AirbyteStream()
-                .withName(STREAM_NAME)
-                .withJsonSchema(generateJsonSchemaWithTwoFields())
-                .withDefaultCursorField(Lists.newArrayList(FIELD_NAME))
+    return new ConfiguredAirbyteCatalog(List.of(new ConfiguredAirbyteStream(
+        new io.airbyte.config.AirbyteStream(STREAM_NAME, generateJsonSchemaWithTwoFields(),
+            List.of(io.airbyte.config.SyncMode.FULL_REFRESH, io.airbyte.config.SyncMode.INCREMENTAL))
+                .withDefaultCursorField(List.of(FIELD_NAME))
                 .withSourceDefinedCursor(false)
-                .withSourceDefinedPrimaryKey(Collections.emptyList())
-                .withSupportedSyncModes(
-                    List.of(io.airbyte.protocol.models.SyncMode.FULL_REFRESH, io.airbyte.protocol.models.SyncMode.INCREMENTAL)))));
+                .withSourceDefinedPrimaryKey(List.of()),
+        io.airbyte.config.SyncMode.INCREMENTAL,
+        DestinationSyncMode.APPEND)));
   }
 
   public static ConfiguredAirbyteCatalog generateMultipleStreamsConfiguredAirbyteCatalog(final int streamsCount) {
@@ -341,25 +337,24 @@ public class ConnectionHelpers {
   }
 
   public static ConfiguredAirbyteStream generateBasicConfiguredStream(final String nameSuffix) {
-    return new ConfiguredAirbyteStream()
-        .withStream(generateBasicAirbyteStream(nameSuffix))
-        .withCursorField(Lists.newArrayList(FIELD_NAME))
-        .withSyncMode(io.airbyte.protocol.models.SyncMode.INCREMENTAL)
-        .withDestinationSyncMode(DestinationSyncMode.APPEND);
+    return new ConfiguredAirbyteStream(generateBasicAirbyteStream(nameSuffix), io.airbyte.config.SyncMode.INCREMENTAL, DestinationSyncMode.APPEND)
+        .withCursorField(List.of(FIELD_NAME));
   }
 
-  private static io.airbyte.protocol.models.AirbyteStream generateBasicAirbyteStream(final String nameSuffix) {
+  private static io.airbyte.config.AirbyteStream generateBasicAirbyteStream(final String nameSuffix) {
     return CatalogHelpers.createAirbyteStream(
         nameSuffix == null ? STREAM_NAME : STREAM_NAME_BASE + nameSuffix, Field.of(FIELD_NAME, JsonSchemaType.STRING))
-        .withDefaultCursorField(Lists.newArrayList(FIELD_NAME))
+        .withDefaultCursorField(List.of(FIELD_NAME))
         .withSourceDefinedCursor(false)
-        .withSupportedSyncModes(List.of(io.airbyte.protocol.models.SyncMode.FULL_REFRESH, io.airbyte.protocol.models.SyncMode.INCREMENTAL));
+        .withSupportedSyncModes(List.of(io.airbyte.config.SyncMode.FULL_REFRESH, io.airbyte.config.SyncMode.INCREMENTAL));
   }
 
   public static AirbyteCatalog generateBasicApiCatalog() {
-    return new AirbyteCatalog().streams(Lists.newArrayList(new AirbyteStreamAndConfiguration()
+    final List<AirbyteStreamAndConfiguration> streams = new ArrayList<>();
+    streams.add(new AirbyteStreamAndConfiguration()
         .stream(generateBasicApiStream(null))
-        .config(generateBasicApiStreamConfig(null))));
+        .config(generateBasicApiStreamConfig(null)));
+    return new AirbyteCatalog().streams(streams);
   }
 
   /**
@@ -368,7 +363,7 @@ public class ConnectionHelpers {
    * @return AirbyteCatalog
    */
   public static AirbyteCatalog generateApiCatalogWithTwoFields() {
-    return new AirbyteCatalog().streams(Lists.newArrayList(new AirbyteStreamAndConfiguration()
+    return new AirbyteCatalog().streams(List.of(new AirbyteStreamAndConfiguration()
         .stream(generateApiStreamWithTwoFields())
         .config(generateBasicApiStreamConfig(null))));
   }
@@ -399,21 +394,23 @@ public class ConnectionHelpers {
   private static AirbyteStreamConfiguration generateBasicApiStreamConfig(final String nameSuffix) {
     return new AirbyteStreamConfiguration()
         .syncMode(SyncMode.INCREMENTAL)
-        .cursorField(Lists.newArrayList(FIELD_NAME))
+        .cursorField(List.of(FIELD_NAME))
         .destinationSyncMode(io.airbyte.api.model.generated.DestinationSyncMode.APPEND)
-        .primaryKey(Collections.emptyList())
+        .primaryKey(List.of())
         .aliasName(Names.toAlphanumericAndUnderscore(nameSuffix == null ? STREAM_NAME : STREAM_NAME_BASE + nameSuffix))
         .selected(true)
-        .fieldSelectionEnabled(false);
+        .suggested(false)
+        .fieldSelectionEnabled(false)
+        .selectedFields(new ArrayList<>());
   }
 
   private static AirbyteStream generateBasicApiStream(final String nameSuffix) {
     return new AirbyteStream()
         .name(nameSuffix == null ? STREAM_NAME : STREAM_NAME_BASE + nameSuffix)
         .jsonSchema(generateBasicJsonSchema())
-        .defaultCursorField(Lists.newArrayList(FIELD_NAME))
+        .defaultCursorField(List.of(FIELD_NAME))
         .sourceDefinedCursor(false)
-        .sourceDefinedPrimaryKey(Collections.emptyList())
+        .sourceDefinedPrimaryKey(List.of())
         .supportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL));
   }
 
@@ -421,9 +418,9 @@ public class ConnectionHelpers {
     return new AirbyteStream()
         .name(STREAM_NAME)
         .jsonSchema(generateJsonSchemaWithTwoFields())
-        .defaultCursorField(Lists.newArrayList(FIELD_NAME))
+        .defaultCursorField(List.of(FIELD_NAME))
         .sourceDefinedCursor(false)
-        .sourceDefinedPrimaryKey(Collections.emptyList())
+        .sourceDefinedPrimaryKey(List.of())
         .supportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL));
   }
 
@@ -432,9 +429,9 @@ public class ConnectionHelpers {
         .namespace(namespace.orElse(STREAM_NAMESPACE))
         .name(name.orElse(STREAM_NAME))
         .jsonSchema(generateJsonSchemaWithTwoFields())
-        .defaultCursorField(Lists.newArrayList(FIELD_NAME))
+        .defaultCursorField(List.of(FIELD_NAME))
         .sourceDefinedCursor(false)
-        .sourceDefinedPrimaryKey(Collections.emptyList())
+        .sourceDefinedPrimaryKey(List.of())
         .supportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL));
   }
 
