@@ -6,18 +6,23 @@ package io.airbyte.workers;
 
 import static org.junit.Assert.assertEquals;
 
-import com.google.common.collect.ImmutableMap;
+import io.airbyte.commons.resources.MoreResources;
 import io.airbyte.config.StandardSync;
 import io.airbyte.persistence.job.models.ReplicationInput;
 import io.airbyte.protocol.models.AirbyteMessage;
+import io.airbyte.protocol.models.AirbyteStream;
 import io.airbyte.protocol.models.AirbyteStreamNameNamespacePair;
+import io.airbyte.protocol.models.Jsons;
 import io.airbyte.workers.test_utils.AirbyteMessageUtils;
 import io.airbyte.workers.test_utils.TestConfigHelpers;
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import org.apache.commons.lang3.tuple.ImmutablePair;
@@ -33,10 +38,10 @@ class RecordSchemaValidatorTest {
   private static final String FIELD_NAME = "favorite_color";
   private static final AirbyteMessage VALID_RECORD = AirbyteMessageUtils.createRecordMessage(STREAM_NAME, FIELD_NAME, "blue");
   private static final AirbyteMessage INVALID_RECORD_1 = AirbyteMessageUtils.createRecordMessage(STREAM_NAME, FIELD_NAME, 3);
-  private static final AirbyteMessage INVALID_RECORD_2 = AirbyteMessageUtils.createRecordMessage(STREAM_NAME, ImmutableMap.of(FIELD_NAME, true));
+  private static final AirbyteMessage INVALID_RECORD_2 = AirbyteMessageUtils.createRecordMessage(STREAM_NAME, Map.of(FIELD_NAME, true));
 
-  private ConcurrentHashMap<AirbyteStreamNameNamespacePair, ImmutablePair<Set<String>, Integer>> validationErrors;
-  private ConcurrentHashMap<AirbyteStreamNameNamespacePair, Set<String>> uncountedValidationErrors;
+  private ConcurrentMap<AirbyteStreamNameNamespacePair, ImmutablePair<Set<String>, Integer>> validationErrors;
+  private ConcurrentMap<AirbyteStreamNameNamespacePair, Set<String>> uncountedValidationErrors;
 
   @BeforeEach
   void setup() {
@@ -94,6 +99,24 @@ class RecordSchemaValidatorTest {
     executorService.awaitTermination(3, TimeUnit.SECONDS);
     assertEquals(1, uncountedValidationErrors.size());
     assertEquals(2, uncountedValidationErrors.get(AIRBYTE_STREAM_NAME_NAMESPACE_PAIR).size());
+  }
+
+  @Test
+  void testMigrationOfIdPropertyToEscapedVersion() throws InterruptedException, IOException {
+    final String jsonSchema = MoreResources.readResource("catalog-json-schema-with-id.json");
+    final AirbyteStream airbyteStream = new AirbyteStream().withJsonSchema(Jsons.deserialize(jsonSchema));
+    final var executorService = Executors.newFixedThreadPool(1);
+    final var recordSchemaValidator =
+        new RecordSchemaValidator(Map.of(AIRBYTE_STREAM_NAME_NAMESPACE_PAIR, airbyteStream.getJsonSchema()), executorService);
+    final List<AirbyteMessage> messagesToValidate = List.of(AirbyteMessageUtils.createRecordMessage(STREAM_NAME, "id", "5"));
+
+    messagesToValidate.forEach(message -> recordSchemaValidator.validateSchemaWithoutCounting(
+        message.getRecord(),
+        AIRBYTE_STREAM_NAME_NAMESPACE_PAIR,
+        uncountedValidationErrors));
+
+    executorService.awaitTermination(3, TimeUnit.SECONDS);
+    assertEquals(0, uncountedValidationErrors.size());
   }
 
 }
